Add CREATE_BREAKAWAY_FROM_JOB to CreateProcess.

This is necessary to remain TortoiseSVN.

Refer to https://bugzilla.mozilla.org/show_bug.cgi?id=1301246
and https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Native_messaging#Closing_the_native_app