native_messaging/open_tortoise_svn_host.cpp
@@ -119,7 +119,7 @@ bool exec_command(const std::wstring &app, const std::vector<std::wstring> &args
     std::copy(command_line.begin(), command_line.end(), cmd.begin());
     cmd[cmd.size() - 1] = L'\0';
 
-    if (!CreateProcessW(app.c_str(), &cmd[0], NULL, NULL, FALSE, NORMAL_PRIORITY_CLASS,
+    if (!CreateProcessW(app.c_str(), &cmd[0], NULL, NULL, FALSE, NORMAL_PRIORITY_CLASS | CREATE_BREAKAWAY_FROM_JOB,
                         NULL, NULL, &si, &pi)){
         return false;
     }
